@@ -1346,38 +1346,50 @@ void pmixp_coll_tree_log(pmixp_coll_t *coll)
 			    tree->contrib_prnt ? "true" : "false");
 	}
 	if (tree->chldrn_cnt) {
-		char *done_contrib, *wait_contrib;
-		hostlist_t hl_done_contrib, hl_wait_contrib;
-		hl_done_contrib = hostlist_copy(tree->all_chldrn_hl);
-		hl_wait_contrib = hostlist_copy(tree->all_chldrn_hl);
+		char *done_contrib = NULL, *wait_contrib = NULL;
+		hostlist_t hl_done_contrib = NULL,
+			hl_wait_contrib = NULL, *tmp_list;
 
 		PMIXP_ERROR("child contribs [%d]:", tree->chldrn_cnt);
 		for (i = 0; i < tree->chldrn_cnt; i++) {
 			nodename = pmixp_info_job_host(tree->chldrn_ids[i]);
-			if (tree->contrib_chld[i]) {
-				hostlist_delete_host(hl_wait_contrib, nodename);
-			} else {
-				hostlist_delete_host(hl_done_contrib, nodename);
-			}
+			tmp_list = tree->contrib_chld[i] ?
+				&hl_done_contrib : &hl_wait_contrib;
+
+			if (!*tmp_list)
+				*tmp_list = hostlist_create(nodename);
+			else
+				hostlist_push_host(*tmp_list, nodename);
+
 			xfree(nodename);
 		}
-		done_contrib = slurm_hostlist_ranged_string_xmalloc(
-			hl_done_contrib);
-		wait_contrib = slurm_hostlist_ranged_string_xmalloc(
-			hl_wait_contrib);
+		if (hl_done_contrib) {
+			done_contrib =
+				slurm_hostlist_ranged_string_xmalloc(
+					hl_done_contrib);
+			FREE_NULL_HOSTLIST(hl_done_contrib);
+		}
+
+		if (hl_wait_contrib) {
+			wait_contrib =
+				slurm_hostlist_ranged_string_xmalloc(
+					hl_wait_contrib);
+			FREE_NULL_HOSTLIST(hl_wait_contrib);
+		}
 		PMIXP_ERROR("\t done contrib: %s",
-			    strlen(done_contrib) ? done_contrib : "-");
+			    done_contrib ? done_contrib : "-");
 		PMIXP_ERROR("\t wait contrib: %s",
-			    strlen(wait_contrib) ? wait_contrib : "-");
-		hostlist_destroy(hl_done_contrib);
-		hostlist_destroy(hl_wait_contrib);
+			    wait_contrib ? wait_contrib : "-");
 		xfree(done_contrib);
 		xfree(wait_contrib);
 	}
-	PMIXP_ERROR("status: coll=%s upfw=%s dfwd=%s", pmixp_coll_tree_state2str(tree->state),
+	PMIXP_ERROR("status: coll=%s upfw=%s dfwd=%s",
+		    pmixp_coll_tree_state2str(tree->state),
 		    pmixp_coll_tree_sndstatus2str(tree->ufwd_status),
 		    pmixp_coll_tree_sndstatus2str(tree->dfwd_status));
-	PMIXP_ERROR("bufs (size/remain): upfw %u/%u, dfwd %u/%u",
-		    size_buf(tree->ufwd_buf), remaining_buf(tree->ufwd_buf),
-		    size_buf(tree->dfwd_buf), remaining_buf(tree->dfwd_buf));
+	PMIXP_ERROR("dfwd status: dfwd_cb_cnt=%u, dfwd_cb_wait=%u",
+		    tree->dfwd_cb_cnt, tree->dfwd_cb_wait);
+	PMIXP_ERROR("bufs (offset/size): upfw %u/%u, dfwd %u/%u",
+		    get_buf_offset(tree->ufwd_buf), size_buf(tree->ufwd_buf),
+		    get_buf_offset(tree->dfwd_buf), size_buf(tree->dfwd_buf));
 }
