@@ -63,6 +63,7 @@ documents those changes that are of interest to users and administrators.
  -- Make sure SLURM_NTASKS_PER_NODE is set correctly when env is overwritten
     by the command line.
  -- Clean up step on a failed node correctly.
+ -- mpi/pmix: fixed the logging of collective state
 
 * Changes in Slurm 18.08.3
 ==========================
